<resources>
    <string name="app_name">Books App</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Enter you password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_email">Please enter an email</string>
    <string name="please_enter_full_name">Please enter your full name</string>
    <string name="error">Error!</string>
    <string name="please_wait">Please wait...</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="full_name">Full Name</string>
    <string name="add_from_gallery">Add From Gallery</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="please_enter_pass">Please enter your password</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="what_is_on_your_mind">Add your review here...</string>
    <string name="create_book_review">Create Book Review</string>
    <string name="update">Update</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="sign_out">Sign Out</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="alarm">Alarm!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="show_my_post">Show My Posts Only</string>
    <string name="my_Location">My Location</string>
    <string name="dont_have_account">Don\'t have an account? Please click here to create!</string>
    <string name="field_missing">This field is mandatory.</string>
    <string name="my_posts">My Posts</string>
    <string name="save_book">Saved Books</string>
    <string name="posts_i_liked">Posts I liked</string>
    <string name="title_activity_posts">BookPostsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="update_post">Update Post</string>
    <string name="there_are_no_post_to_display">There are no posts to display.</string>
    <string name="rate">Rate the book:</string>
    <string name="rating">Rating</string>
    <string name="attachment">Attachment:</string>
    <string name="book_name">Book name...</string>
    <string name="search_by_book_name">Search book name...</string>
    <string name="write_comment">Write comment...</string>
    <string name="comments">Comments</string>
    <string name="search">Search</string>
</resources>