<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/light_grey"
        android:padding="16dp">

        <EditText
            android:id="@+id/book_name"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:hint="@string/book_name"
            android:layout_margin="16dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/dark_gray"            android:layout_height="wrap_content"
            android:background="@null"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/light_grey"
        android:padding="16dp">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:textColor="@color/blue"
            android:padding="16dp"
            android:hint="@string/what_is_on_your_mind"
            android:textColorHint="@color/dark_gray"
            android:layout_height="wrap_content"
            android:background="@null"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginVertical="8dp"
        android:text="@string/rate"/>
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:focusable="false"
        android:numStars="5"
        android:stepSize="1"
        android:rating="0" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:text="@string/attachment"/>
            <ImageView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:tint="@color/blue"
                android:src="@drawable/baseline_camera_alt_24"/>

            <ImageView
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:tint="@color/blue"
                android:src="@drawable/baseline_attach_file_24"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/post_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:text="Book Type"/>

    <Spinner
        android:id="@+id/bookTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

</LinearLayout>